--- a/style.css
+++ b/style.css
@@ -1,14 +1,110 @@
-.search{
-    padding-top: 30px;
+@import url('https://fonts.googleapis.com/css?family=Arimo');
+
+body{
+    font-family: 'Arimo', Helvetica, Arial, sans-serif;
+    background-color: white;
+}
+
+header{
+    background-color: black;
+    width: 100%;
+    height: 80px;
+    color: white;
+    font-family: inherit;
+    font-size: 30px;
     text-align: center;
-    margin-bottom: 30px;
+    font-weight: 400;
+    letter-spacing: 1.5;
+    height: 50px;
+    border-bottom: 7px solid #2196F3;
+}
+
+.enterCountry{
+    padding-top: 50px;
+    text-align: center;
+    font-family: inherit;
+}
+
+.search{
+    padding-top: 10px;
+    font-family: inherit;
 }
 
 #searchbar{
-    width: 300px;
+    width: 100%;
+    height: 35px;
+    font-family: inherit;
+    box-shadow: 0px 2px 5px 2px #888, inset, 0 0 20px 2px black;
 }
 
 #searchbutton{
-    margin-left: -4px;
-    padding-top: 2px;
+    width: 100%;
+    float: left;
+    padding: 5px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+    margin-top: 25px;
+    font-family: inherit;
+}
+
+.earth{
+    width: 400px;
+    height: 400px;
+    /* background-image: url('https://media.treehugger.com/assets/images/2013/06/1.jpg');
+     */
+    background-image: url('http://www.gotosee.tv/gotosee/motionselector/motion/Three.js/images/earth-outline-shifted-gray.png');
+    position: absolute;
+    top: 400px;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /* margin: auto; will center */
+    margin: auto; 
+    border-radius: 50%;
+    background-size: cover;
+    background-repeat: repeat-x;
+    box-shadow: -20px -20px 50px 2px #222 inset, 0 0 20px 2px black;
+    animation: spin 40s linear infinite;
+}
+
+.contain{
+    margin-left: 10%;
+    margin-right: 10%;
+    width: 80%;
+}
+
+@media (max-width: 900px) {
+    .earth{
+        width: 150px;
+        height: 150px;
+        background-image: url('http://www.gotosee.tv/gotosee/motionselector/motion/Three.js/images/earth-outline-shifted-gray.png');
+        position: absolute;
+        top: 350px;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        margin: auto; 
+        border-radius: 50%;
+        background-size: cover;
+        background-repeat: repeat-x;
+        box-shadow: -20px -20px 50px 2px #222; inset, 0 0 20px 2px black;
+        animation: spin 40s linear infinite;
+    }
+}
+
+@keyframes spin{
+    /* 100%{
+        background-position: 100%;
+    } */
+
+    from{
+        background-position: 0 0;
+    }
+    to{
+        background-position: 100% 0;
+    }
 }
