--- a/style.css
+++ b/style.css
@@ -62,6 +62,20 @@ h3{
     font-family: inherit;
 }
 
+#randombutton{
+    width: 100%;
+    float: left;
+    padding: 5px;
+    background: #2196F3;
+    color: white;
+    font-size: 17px;
+    border: 1px solid grey;
+    border-left: none; /* Prevent double borders */
+    cursor: pointer;
+    margin-top: 25px;
+    font-family: inherit;
+}
+
 .earth{
     width: 400px;
     height: 400px;
