--- a/stylesheet.css
+++ b/stylesheet.css
@@ -11,7 +11,7 @@ header{
     justify-content: space-between;
     border-bottom: 2px solid black;
     background-color: #7eaba4
-    
+
 }
 h1{
     margin-left: 4%;
@@ -200,6 +200,9 @@ body{
 }
 #g{
     justify-content: center;
+}
+.eco{
+    text-decoration: underline;
 }
 
 @media(max-width: 1020px){
