--- a/stylesheet.css
+++ b/stylesheet.css
@@ -3,6 +3,15 @@ body{
     margin: 0 0 0 0;
 }
 
+a{
+    text-decoration: none;
+    color: #343635;
+}
+
+a:hover{
+    color: whitesmoke;
+}
+
 header{
     width: 100%;
     height: 65px;
